			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

18-Dec-2005
~~~~~~~~~~~
Allow .desktop files to be used as run actions (Thomas Leonard).

17-Dec-2005
~~~~~~~~~~~
Bugfix: New detail crashes cleanice theme (reported by Andras Mohari; reported
	as CleanIce bug #1383457). Try another value...

16-Dec-2005
~~~~~~~~~~~
Highlight icons using the theme's preferred colour instead of always using
blue (Andras Mohari).
Bugfix: Don't set style detail to "base" when highlighting items in a
	Collection, as it confuses GTK's lighthouseblue theme engine
	(Thomas Leonard).

15-Dec-2005
~~~~~~~~~~~
Bugfix: Changing the display style crashes the filer with GTK >= 2.8.9 because
	it sends a selection changed event before the view has finished
	initialising (Thomas Leonard; reported by Tobias Kieslich).
Removed some done entries from the TODO file (Stephen Watson).

13-Dec-2005 (Release 2.4)
~~~~~~~~~~~
Updated Chinese translations (Babyfai Cheung).

11-Dec-2005
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Make Path optional in PanelRemove SOAP call, allowing removal of items based
only on their label (Jonatan Liljedahl).
Bugfix: The install script failed to compile ROX-Filer on Debian systems, due
	to a bug in recent versions of xterm (Vincent Lefèvre). Added a
	workaround.
Bugfix: On 64-bit systems communication between ROX-Filer processes didn't
	work, because GDK uses sizeof(long) bytes (not always 4 bytes) to store
	a 32 bit property (Lucas Hazel).

29-Nov-2005
~~~~~~~~~~~
Removed 'Open AVFS' from menu. It doesn't do anything on most systems, and you
can always add it with 'Customise menu...' if you want it (Thomas Leonard).
Better support for old GNOME themes with GNOME-specific MIME names (Dennis
Tomas).

21-Nov-2005
~~~~~~~~~~~
Bugfix: Let -R work again (Stephen Watson).

12-Nov-2005
~~~~~~~~~~~
Added initial support for .desktop files (Thomas Leonard). They are now shown
as executable, with the appropriate icons, and clicking on them runs the