@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+27-Dec-2005
+~~~~~~~~~~~
+If we can't find libc.so.6 for xattr support, try libc.so in case we only have
+uClib (Lucas Correia Villa Real).
+
 18-Dec-2005
 ~~~~~~~~~~~
 Allow .desktop files to be used as run actions (Thomas Leonard).
